--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+sw.*
+workbox-*
+swe-worker-*
 # dependencies
 /node_modules
 /.pnp
